--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>MBTA Rider Segmentation Dashboard</title>
 
     <!-- css and library imports -->
-    <link rel="stylesheet" href="./static/lib/css/tether.min.css">
-    <link rel="stylesheet" href="./static/lib/css//bootstrap.min.css">
-    <link rel="stylesheet" href="./static/lib/css//bootstrap-grid.min.css">
-    <link rel="stylesheet" href="./static/lib/css//bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="./static/lib/css/keen-dashboards.css">
-    <link rel="stylesheet" href="./static/lib/css/leaflet.css">
-    <link rel="stylesheet" href="./static/lib/css/font-awesome.min.css">
+    <link rel="stylesheet" href="static/lib/css/tether.min.css">
+    <link rel="stylesheet" href="static/lib/css//bootstrap.min.css">
+    <link rel="stylesheet" href="static/lib/css//bootstrap-grid.min.css">
+    <link rel="stylesheet" href="static/lib/css//bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="static/lib/css/keen-dashboards.css">
+    <link rel="stylesheet" href="static/lib/css/leaflet.css">
+    <link rel="stylesheet" href="static/lib/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="./static/css/custom.css">
+    <link rel="stylesheet" href="static/css/custom.css">
 
-    <script src="./static/lib/js/tether.min.js"></script>
-    <script type="text/javascript" src="./static/lib/js/jquery-3.3.1.min.js"></script>
+    <script src="static/lib/js/tether.min.js"></script>
+    <script type="text/javascript" src="static/lib/js/jquery-3.3.1.min.js"></script>
 </head>
 
 <body class="application">
@@ -26,7 +26,7 @@
         <a href="/" class="navbar-brand ml-4">
             <!-- icon downloaded from http://www.brandsoftheworld.com/logo/mbta-0 -->
             <!-- converted to .svg using https://cloudconvert.com/eps-to-svg -->
-            <img src="../static/img/MBTA_full.svg" width="200" height="50" alt="MBTA logo">
+            <img src="static/img/MBTA_full.svg" width="200" height="50" alt="MBTA logo">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#MBTAnavbar" aria-controls="MBTAnavbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -234,15 +234,15 @@
 
     </div>
 
-    <script src="./static/lib/js/bootstrap.min.js"></script>
-    <script src="./static/lib/js/underscore-min.js"></script>
-    <script src="./static/lib/js/d3.min.js"></script>
-    <script src="./static/lib/js/d3-tip.js"></script>
-    <script src="./static/lib/js/d3pie.min.js"></script>
-    <script src="./static/lib/js/queue.js"></script>
-    <script src="./static/lib/js/leaflet.js"></script>
-    <script src="./static/lib/js/leaflet-heat.js"></script>
-    <script src="./static/lib/js/keen.min.js"></script>
+    <script src="static/lib/js/bootstrap.min.js"></script>
+    <script src="static/lib/js/underscore-min.js"></script>
+    <script src="static/lib/js/d3.min.js"></script>
+    <script src="static/lib/js/d3-tip.js"></script>
+    <script src="static/lib/js/d3pie.min.js"></script>
+    <script src="static/lib/js/queue.js"></script>
+    <script src="static/lib/js/leaflet.js"></script>
+    <script src="static/lib/js/leaflet-heat.js"></script>
+    <script src="static/lib/js/keen.min.js"></script>
     <!-- <script src='./static/js/clusterPCAVis.js' type='text/javascript'></script>
     <script src='./static/js/clusterSimpleStatVis.js' type='text/javascript'></script>
     <script src='./static/js/clusterReport.js' type='text/javascript'></script>
