--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                     <label class="input-group-prepend input-group-addon ml-2 p-2 toolbar-text" for="time-weight-selection">Time Weight </label>
                     <select class="custom-select toolbar-text" id="time-weight-selection">
                         <option selected value="0">0</option>
-                        <option value="25">25</option>
-                        <option value="50">50</option>
-                        <option value="75">75</option>
-                        <option value="100">100</option>
+                        <option disabled value="25">25</option>
+                        <option disabled value="50">50</option>
+                        <option disabled value="75">75</option>
+                        <option disabled value="100">100</option>
                     </select>
                 </div>
 
@@ -243,20 +243,20 @@
     <script src="lib/js/leaflet.js"></script>
     <script src="lib/js/leaflet-heat.js"></script>
     <script src="lib/js/keen.min.js"></script>
-    <!-- <script src='./static/js/clusterPCAVis.js' type='text/javascript'></script>
-    <script src='./static/js/clusterSimpleStatVis.js' type='text/javascript'></script>
-    <script src='./static/js/clusterReport.js' type='text/javascript'></script>
-    <script src='./static/js/hourlyHeatmap.js' type='text/javascript'></script>
-    <script src='./static/js/temporalPatternVis.js' type='text/javascript'></script>
-    <script src='./static/js/temporalLegend.js' type='text/javascript'></script>
-    <script src='./static/js/clusterDonutChart.js' type='text/javascript'></script>
-    <script src='./static/js/groupDonutChart.js' type='text/javascript'></script>
-    <script src='./static/js/stackedORGroupedBarChart.js' type='text/javascript'></script>
-    <script src='./static/js/multiStackedBarChart.js' type='text/javascript'></script>
-    <script src='./static/js/groupDistributionVis.js' type='text/javascript'></script>
-    <script src='./static/js/bostonMap.js' type='text/javascript'></script>
-    <script src='./static/js/main.js' type='text/javascript'></script>
-    <script src='./static/js/app.js' type='text/javascript'></script> -->
+    <script src='js/clusterPCAVis.js' type='text/javascript'></script>
+    <script src='js/clusterSimpleStatVis.js' type='text/javascript'></script>
+    <script src='js/clusterReport.js' type='text/javascript'></script>
+    <script src='js/hourlyHeatmap.js' type='text/javascript'></script>
+    <script src='js/temporalPatternVis.js' type='text/javascript'></script>
+    <script src='js/temporalLegend.js' type='text/javascript'></script>
+    <script src='js/clusterDonutChart.js' type='text/javascript'></script>
+    <script src='js/groupDonutChart.js' type='text/javascript'></script>
+    <script src='js/stackedORGroupedBarChart.js' type='text/javascript'></script>
+    <script src='js/multiStackedBarChart.js' type='text/javascript'></script>
+    <script src='js/groupDistributionVis.js' type='text/javascript'></script>
+    <script src='js/bostonMap.js' type='text/javascript'></script>
+    <script src='js/main.js' type='text/javascript'></script>
+    <!-- <script src='./static/js/app.js' type='text/javascript'></script> -->
 </body>
 
 </html>
