--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <script src='js/groupDistributionVis.js' type='text/javascript'></script>
     <script src='js/bostonMap.js' type='text/javascript'></script>
     <script src='js/main.js' type='text/javascript'></script>
-    <!-- <script src='./static/js/app.js' type='text/javascript'></script> -->
+    <script src='js/app.js' type='text/javascript'></script>
 </body>
 
 </html>
