--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="application">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-toggleable-md navbar-light bg-light">
-        <a href="/" class="navbar-brand ml-4">
+        <a href="#" class="navbar-brand ml-4">
             <!-- icon downloaded from http://www.brandsoftheworld.com/logo/mbta-0 -->
             <!-- converted to .svg using https://cloudconvert.com/eps-to-svg -->
             <img src="img/MBTA_full.svg" width="200" height="50" alt="MBTA logo">
@@ -34,13 +34,13 @@
         <div class="collapse navbar-collapse justify-content-end mr-4" id="MBTAnavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Dashboard</a>
+                    <a class="nav-link" href="#">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/report">Documentation</a>
+                    <a class="nav-link" href="doumentation.html">Documentation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
             </ul>
         </div>
