--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <a class="nav-link" href="index.html">Dashboard</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="https://ac297r-mbta-2018.github.io/Final-Report/">Report</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="documentation.html">Documentation</a>
                 </li>
                 <li class="nav-item">
