--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="application">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-toggleable-md navbar-light bg-light">
-        <a href="index.html" class="navbar-brand ml-4">
+        <a href="https://ac297r-mbta-2018.github.io/Final-Report/" class="navbar-brand ml-4">
             <!-- icon downloaded from http://www.brandsoftheworld.com/logo/mbta-0 -->
             <!-- converted to .svg using https://cloudconvert.com/eps-to-svg -->
             <img src="img/MBTA_full.svg" width="200" height="50" alt="MBTA logo">
