--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="https://ac297r-mbta-2018.github.io/Final-Report/">Report</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="documentation.html">Documentation</a>
+                    <a class="nav-link" href="https://ac297r-mbta-2018.github.io/Code-Documentation/">Documentation</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
