fixed dashboard in about.html

--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="https://ac297r-mbta-2018.github.io/Code-Documentation/">Documentation</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="about.html">About</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
             </ul>
         </div>
