added the about page

--- a/about.html
+++ b/about.html
@@ -100,21 +100,13 @@
                 <p>
                     <em>MBTA Rider Segmentation: The Who, What, and When of Public Transit</em> is a Spring 2018 <a href="http://ac297r.com/"> Harvard IACS Capstone Project</a>
                 </p>
-                <br/>
 
                 <h2>About Us</h2>
                 <p>We are <span class="person-info michelle">Michelle Ho</span>, <span class="person-info jasmine">Jiawen Tong</span> and <span class="person-info yijun">Yijun Shen</span> and <span class="person-info anthony">Anthony Hou</span>.
-                    <p>We would like to thank the MBTA representatives <strong>Brendan Fogarty</strong> and <strong>Ian Thistle</strong> for providing insightful guidance on our project. We would also like to thank our advisor <strong>Zona Kostic</strong>, Professor
-                        <strong>Pavlos Protopapas</strong> and every member of the teaching team for conducting this amazing course.</p>
+                <p>We would like to thank the MBTA representatives <strong>Brendan Fogarty</strong> and <strong>Ian Thistle</strong> for providing insightful guidance on our project. We would also like to thank our advisor <strong>Zona Kostic</strong>,
+                    Professor <strong>Pavlos Protopapas</strong> and every member of the teaching team for conducting this amazing course.</p>
             </div>
-
         </div>
-
-
-
-
-
-
     </div>
 
     <script src="lib/js/bootstrap.min.js"></script>
